# parallel-cpp-labs

./: .gitignore
1lab/: FIXES.md  REPORT.md  RESULT.md
1lab/airport/: CMakeLists.txt  airport.cpp
1lab/floyd_warshall/: CMakeLists.txt  floyd_warshall.cpp  floyd_warshall.h  main.cpp
1lab/http_light/: CMakeLists.txt  main.cpp  thread_pool.cpp  thread_pool.h
1lab/word_count/: CMakeLists.txt  word_count.cpp
2lab/: FIXES.md  REPORT.md  RESULT.md
2lab/anti_fraud/: CMakeLists.txt  anti_fraud.cpp
2lab/k-NN/: CMakeLists.txt  knn.cpp  knn.h  main.cpp
2lab/sast/: CMakeLists.txt  sast.cpp
2lab/sha1-bf/: CMakeLists.txt  main.cpp  sha1_bruteforce.cpp  sha1_bruteforce.h
2lab/spam/: CMakeLists.txt  main.cpp  spam_filter.cpp  spam_filter.h
3lab/: FIXES.md  REPORT.md  RESULT.md
3lab/ddos/: CMakeLists.txt  ddos.cpp
3lab/ioc/: CMakeLists.txt  ioc.cpp
3lab/nmap/: CMakeLists.txt  nmap.cpp
3lab/sqlmap/: CMakeLists.txt  scan_results.xml  sqli.cpp  xml_parser.cpp  xml_parser.h
4lab/: FIXES.md  REPORT.md
4lab/buffer_overflow/: CMakeLists.txt  CMakeLists_cuda.txt  README.md  buffer_overflow.cu  main.cpp
4lab/obfuscation/: CMakeLists.txt  CMakeLists_cuda.txt  README.md  main.cpp  obfuscation.cu
4lab/rootkit/: CMakeLists.txt  CMakeLists_cuda.txt  main.cpp  rootkit.cu
4lab/web_analyze/: CMakeLists.txt  CMakeLists_cuda.txt  README.md  main.cpp  web_analyze.cu
